removing scrollbar and server config fix

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -198,3 +198,7 @@ h5 {
   text-align: center;
   margin-top: 4vh;
 }
+
+body::-webkit-scrollbar {
+  display: none;
+}
